# ChangeLog for app-cdr/k3b
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.34 2003/12/16 22:04:08 azarah Exp $

*k3b-0.10.3-r2 (16 Dec 2003)

  16 Dec 2003; Martin Schlemmer <azarah@gentoo.org> k3b-0.10.3-r2.ebuild,
  files/k3b-0.10.3-hacked-cdrdao.patch:
  Make k3b work with cdrdao and 2.6 kernel (we need >=cdrdao-1.1.7-r3 that
  have the '-gentoo' appended to its version).  Note that this is ATAPI
  support with cdrdao ...

  15 Dec 2003; Martin Schlemmer <azarah@gentoo.org> k3b-0.10.3-r1.ebuild:
  Add a '[ -d "${WORKDIR}/${I18N}" ]' check in case the LINGUAS is not supported.

*k3b-0.10.3-r1 (14 Dec 2003)
  14 Dec 2003; Martin Schlemmer <azarah@gentoo.org> k3b-0.10.3-r1.ebuild:
  For some reason things gets borked if the linguas stuff is done without
  LINGUAS set (I am assuming that it runs the automake in the k3b main source
  dir ...), bug #33434. Also add some other cleanups and form fixes.

*k3b-0.10.3 (04 Dec 2003)

  04 Dec 2003; Caleb Tennis <caleb@gentoo.org> k3b-0.10.2.ebuild, k3b-0.10.3.ebuild:
  New bug fix version, remove 0.10.2 as it has a nasty bug.

  30 Nov 2003; Caleb Tennis <caleb@gentoo.org> k3b-0.10.2.ebuild:
  Add a note about where new k3bsetup program is located.
  Closes bug #33566, thanks to Derek Williams for the fix.

  17 Nov 2003; David Holm <dholm@gentoo.org> k3b-0.10.2.ebuild:
  Apparently it's difficult to move the ~ppc keyword to new versions of this app.

*k3b-0.10.2 (11 Nov 2003)

  11 Nov 2003; Caleb Tennis <caleb@gentoo.org> k3b-0.10.2.ebuild:
  New version, modified LINGUA support

  08 Nov 2003; David Holm <dholm@gentoo.org> k3b-0.10.1.ebuild:
  Added to ~ppc.

  01 Nov 2003; Caleb Tennis <caleb@gentoo.org> k3b-0.10.1.ebuild:
  Add in Azarah's patch for gcc 2.95 compatibility

*k3b-0.10.1 (31 Oct 2003)

  31 Oct 2003; Caleb Tennis <caleb@gentoo.org> k3b-0.10.1.ebuild:
  Version bump, add i18n support (thanks to Carlo) bug #32113
